# RTX

./: CMakeLists.txt
src/base/: Camera.cpp  Camera.h  Ray.h  Tracer.cpp  Tracer.h  World.cpp  World.h
src/base/objects/: Object.cpp  Object.h  Sphere.cpp  Sphere.h
test/: 01 image read write.cpp  01 image_read_write glm.cpp  01 image_read_write.cpp  02 Tracer.cpp
